20200407_codewar_posting_01_modify

--- a/_posts/2020-04-07-Codewar_01.md
+++ b/_posts/2020-04-07-Codewar_01.md
@@ -35,3 +35,33 @@ class Kata {
 
 *replace 와 replaceAll의 차이점
 
+String replace(CharSequnce target, CharSequence replacement)
+
+String replaceAll(String regex, String replacement)
+
+
+
+replace는 첫번째 인자값을 보시면 문자열이 들어간다. 결국  문자열만 변환가능.
+
+replaceAll은 첫번째 인자값에 정규식이 들어간다.
+
+ 
+
+예제)
+
+ String str = "aaabbbccccabcddddabcdeeee";
+
+ String result1 = str.replace("abc", "왕");
+ String result2 = str.replaceAll("[abc]", "왕");
+
+ System.out.println("replace result->"+ result1);
+ System.out.println("replaceAll result->"+ result2);
+
+ 
+
+[결과값]
+
+replace result->aaabbbcccc왕dddd왕deeee
+replaceAll result->왕왕왕왕왕왕왕왕왕왕왕왕왕dddd왕왕왕deeee
+
+replaceAll에는 정규식을 사용할수가 있어서 replace에서 처리하지 못한 문자열도 처리가 가능.
