--- a/_posts/2020-04-08-Codewar_02.md
+++ b/_posts/2020-04-08-Codewar_02.md
@@ -1,6 +1,7 @@
 ---
 title:  "CodeWar 두 번째 문제"
 excerpt: "Multiples of 3 or 5"
+classes: wide
 categories:
   - CodeWar
 tags:
@@ -8,9 +9,7 @@ tags:
 last_modified_at: 2020-04-08
 ---
 
-#### [Multiples of 3 or 5]
-
-#### (https://www.codewars.com/kata/514b92a657cdc65150000006)
+#### [Multiples of 3 or 5](https://www.codewars.com/kata/514b92a657cdc65150000006)
 
 
 
