--- a/_posts/2020-04-08-Codewar_03.md
+++ b/_posts/2020-04-08-Codewar_03.md
@@ -1,7 +1,7 @@
 ---
 title:  "CodeWar 세 번째 문제"
 excerpt: "Human Readable Time"
-
+classes: wide
 categories:
   - CodeWar
 tags:
@@ -9,9 +9,7 @@ tags:
 last_modified_at: 2020-04-08
 ---
 
-#### [Human Readable Time]
-
-#### (https://www.codewars.com/kata/52685f7382004e774f0001f7)
+#### [Human Readable Time](https://www.codewars.com/kata/52685f7382004e774f0001f7)
 
 ```java
 public class HumanReadableTime {
