--- a/_posts/2020-04-08-Codewar_04.md
+++ b/_posts/2020-04-08-Codewar_04.md
@@ -1,7 +1,7 @@
 ---
 title:  "CodeWar 네 번째 문제"
 excerpt: "Find the odd int"
-
+classes: wide
 categories:
   - CodeWar
 tags:
@@ -9,9 +9,7 @@ tags:
 last_modified_at: 2020-04-08
 ---
 
-#### [Find the odd int]
-
-#### (https://www.codewars.com/kata/54da5a58ea159efa38000836)
+#### [Find the odd int](https://www.codewars.com/kata/54da5a58ea159efa38000836)
 
 ```java
 public class FindOdd {
