--- a/_posts/2020-04-08-Codewar_05.md
+++ b/_posts/2020-04-08-Codewar_05.md
@@ -1,6 +1,7 @@
 ---
 title:  "CodeWar 다섯 번째 문제"
 excerpt: "Directions Reduction"
+classes: wide
 categories:
   - CodeWar
 tags:
@@ -8,9 +9,7 @@ tags:
 last_modified_at: 2020-04-08
 ---
 
-#### [Directions Reduction]
-
-#### (https://www.codewars.com/kata/550f22f4d758534c1100025a)
+#### [Directions Reduction](https://www.codewars.com/kata/550f22f4d758534c1100025a)
 
 ```java
 public class DirReduction {
