--- a/_posts/2020-04-08-Codewar_06.md
+++ b/_posts/2020-04-08-Codewar_06.md
@@ -51,9 +51,8 @@ public class Max {
 
 *Kadane 알고리즘
 
-$$
-K_i \equiv Max(K_(i-1) + arr[i], arr[i])
-$$
+![image-20200408183035594](C:\Users\user\AppData\Roaming\Typora\typora-user-images\image-20200408183035594.png)
+
 
 
 예시1)
