--- a/_posts/2020-04-08-Codewar_06.md
+++ b/_posts/2020-04-08-Codewar_06.md
@@ -51,7 +51,7 @@ public class Max {
 
 *Kadane 알고리즘
 
-![image-20200408183035594](C:\Users\user\AppData\Roaming\Typora\typora-user-images\image-20200408183035594.png)
+![kadane](C:\Users\user\Desktop\myBlog\sunlike0508.github.io\assets\images\kadane.jpg)
 
 
 
