--- a/_posts/java/2020-04-09-Java개념공부_01.md
+++ b/_posts/java/2020-04-09-Java개념공부_01.md
@@ -3,8 +3,9 @@ title:  "자바 개념공부 01"
 excerpt: "변수"
 classes: wide
 categories:
-  - 변수
+  - java
 tags:
+  - java
   - 변수
 last_modified_at: 2020-04-09
 ---
