--- a/_posts/codewar/2020-04-08-Codewar_06.md
+++ b/_posts/codewar/2020-04-08-Codewar_06.md
@@ -51,9 +51,7 @@ public class Max {
 
 *Kadane 알고리즘
 
-![kadane](C:\Users\user\Desktop\myBlog\sunlike0508.github.io\assets\images\kadane.jpg)
-
-
+![kadane](C:\Users\user\Desktop\myBlog\sunlike0508.github.io\assets\images\kadane.PNG)
 
 예시1)
 
