--- a/_posts/codewar/2020-04-08-Codewar_03.md
+++ b/_posts/codewar/2020-04-08-Codewar_03.md
@@ -7,7 +7,8 @@ categories:
 tags:
   - CodeWar
   - 5kyu
-last_modified_at: 2020-04-08
+  - String
+last_modified_at: 2020-04-10
 ---
 
 #### [Human Readable Time](https://www.codewars.com/kata/52685f7382004e774f0001f7)
