--- a/_posts/java/2020-04-10-Java개념공부_04.md
+++ b/_posts/java/2020-04-10-Java개념공부_04.md
@@ -25,6 +25,10 @@ String str = "hello";   // String str = new String("hello");
 str = str + " world";  // [ hello world ]
 ```
 
+![](C:\Users\user\Desktop\myBlog\sunlike0508.github.io\assets\images\kadane.PNG)
+
+
+
 *Sql 작성할 때 유용하다.
 
 ```java
