--- a/_posts/java/2020-04-10-Java개념공부_04.md
+++ b/_posts/java/2020-04-10-Java개념공부_04.md
@@ -1,5 +1,5 @@
 ---
-title:  "자바 개념공부 03"
+title:  "자바 개념공부 04"
 excerpt: "String&StringBuffer&StringBuilder"
 classes: wide
 categories:
@@ -18,151 +18,46 @@ last_modified_at: 2020-04-10
 
 **String과 StringBuffer/StringBuilder의 차이점**
 
-*가장 큰 차이점은 String은 불변(immutable)이라는 점.  읽는 경우는 성능이 좋으나 연산의 경우 좋지 않음
+*가장 큰 차이점은 String은 불변(immutable)이라는 점.  
+
+*Heap 메모리에서 생성되기 때문에 많은 연산의 경우 Garbage 생성이 빈번하여 성능이 저하.
+
+(읽거나 간단한 연산의 경우는 성능이 월등하다. 단지 많은 연산은 안 좋을뿐)
 
 ```java
+/* String의 메모리 변화 */
 String str = "hello";   // String str = new String("hello");
 str = str + " world";  // [ hello world ]
 ```
 
-![](C:\Users\user\Desktop\myBlog\sunlike0508.github.io\assets\images\kadane.PNG)
-
-
-
-*Sql 작성할 때 유용하다.
+![](C:\Users\user\Desktop\myBlog\sunlike0508.github.io\assets\images\string.png)
 
 ```java
-/* 예시 1 */
-String[] param = new String[] {" 1", "100", "154","155","21"};
-String paramforIn = String.join(",", param);
-
-StringBuilder sql = new StringBuilder();
-
-sql.append("Select * from raw_contacts where _id in (").append(paramforIn).append(")");
-
-System.out.println(sql.toString());
-//결과 값 : Select * from raw_contacts where _id in (1,100,154,155,21)
-
-/* 예시 2 */
-String[] names = new String[] {"홍길동", "임꺽정", "슈퍼맨", "배트맨", "아이언맨" };
-List<String> nameList = Arrays.asList(names);
-String sql1 = nameList.stream()
-	.map(name -> "'" + name + "'" )
-	.collect(Collectors.joining(","));
-
-System.out.println(sql1);
+/* StringBuffer의 메모리 변화 */
+StringBuffer sb= new StringBuffer("hello");
+sb.append(" world");
 ```
 
+![](C:\Users\user\Desktop\myBlog\sunlike0508.github.io\assets\images\StringBuffer.png)
 
 
-**split**
 
-*형식 : split( String regex, int limit ) : limit은 토큰 갯수를 설정. -1을 넣을 경우 마지막
+**StringBuffer와 StringBuilder의 차이점**
 
-*StringTokenizer와의 차이
+*가장 큰 차이점은 동기화의 유무.
 
-1. StringTokenizer는 클래스, split은 String 클래스의 메소드
-2. split은  StringTokenizer와 다르게 인자로 정규식을 사용. 그래서 StringTokenizer가 속도는 좋다. 그러나 가변적인 요소가 많거나 정확한 것을 원하면 split이 더 좋음.
+*StringBuffer는 동기화 지원. Multi-Thread에서 안전(safe). (String도 불변이므로 안전. 성능이 구릴뿐)
 
-*StringTokenizer 주요 메소드
+*StringBuilder는 동기화 지원을 안함. 단일 Thread에서는 최강의 성능
 
-| 반환값  |    메소드 명    |        설명         |
-| :-----: | :-------------: | :-----------------: |
-| boolean | hasMoreTokens() | 남아 있는 토큰 여부 |
-| String  |   nextToken()   |    토큰 꺼내오기    |
+*동기화와 Thread는 따로 정리하여 포스팅
 
-```java
-/* 예시 */
-public class StringDivideTest {
-    public static void stringTokenizerTest(String str) {
-        System.out.println("====== stringTokenizerTest() result ======");
-        StringTokenizer tokenizer = new StringTokenizer(str, ",");
-        for (int i = 0; tokenizer.hasMoreTokens(); i++) {
-            System.out.println(i + "번째 : " + tokenizer.nextToken());
-        }
-    }
- 
-    public static void splitTest(String str) {
-        System.out.println("====== splitTest() result ======");
-        String split[] = str.split(",");
-        for (int i = 0; i < split.lenght; i++) {
-            System.out.println(i + "번째 : " + split[i]);
-        }
-    }
-}
-```
 
-*위의 메소드를 기준으로 아래와 같이 문자열에 따라 결과 값이 달라진다.
 
-```java
-/* 예시 1 : 데이터 + 구분자 + 데이터 */
-public static void main(String[] args) {
-    String str = "apple,banana,kiwi";
-    stringTokenizerTest(str);
-    splitTest(str);
-}
-/* 결과 값 
-====== stringTokenizerTest() result ======
-0번째 : apple
-1번째 : banana
-2번째 : kiwi
-====== splitTest() result ======
-0번째 : apple
-1번째 : banana
-2번째 : kiwi
-*/
+**최종 정리**
 
-/* 예시 2 : 데이터 + 구분자 + 구분자 + 데이터 */
-public static void main(String[] args) {
-    String str = "apple,banana,,kiwi";
-    stringTokenizerTest(str);
-    splitTest(str);
-}
-/* 결과 값 
-====== stringTokenizerTest() result ======
-0번째 : apple
-1번째 : banana
-2번째 : kiwi
-====== splitTest() result ======
-0번째 : apple
-1번째 : banana
-2번째 : 
-3번째 : kiwi
-*/
+*String : 연산이 적고 Multi-Thread에서 안전
 
-/* 예시 3 : 데이터 + 구분자 */
-public static void main(String[] args) {
-    String str = "apple,banana,kiwi,";
-    stringTokenizerTest(str);
-    splitTest(str);
-}
-/* 결과 값 
-====== stringTokenizerTest() result ======
-0번째 : apple
-1번째 : banana
-2번째 : kiwi
-====== splitTest() result ======
-0번째 : apple
-1번째 : banana
-2번째 : kiwi
-*/
+*StringBuffer : 연산이 많고 Multi-Thread에서 안전
 
-/* 예시 4 : 데이터 + 구분자 (구분자 뒤에 마지막도 표현하고 싶을 경우) */
-public static void main(String[] args) {
-    String str = "apple,banana,kiwi,";
-    stringTokenizerTest(str);
-    splitTest(str); // String split[] = str.split(",", -1);로 변경
-}
-/* 결과 값 
-====== stringTokenizerTest() result ======
-0번째 : apple
-1번째 : banana
-2번째 : kiwi
-====== splitTest() result ======
-0번째 : apple
-1번째 : banana
-2번째 : kiwi
-3번째 : 
-*/
-```
-
+*StringBuilder : 연산이 많고 단일-Thread이거나 동기화가 없는 경우
