--- a/_posts/java/2020-04-10-Java개념공부_04.md
+++ b/_posts/java/2020-04-10-Java개념공부_04.md
@@ -30,7 +30,7 @@ String str = "hello";   // String str = new String("hello");
 str = str + " world";  // [ hello world ]
 ```
 
-![](C:\Users\user\Desktop\myBlog\sunlike0508.github.io\assets\images\string.png)
+![]({{site.url}}/assets/images/string.png)
 
 ```java
 /* StringBuffer의 메모리 변화 */
