--- a/_posts/java/2020-04-10-Java개념공부_04.md
+++ b/_posts/java/2020-04-10-Java개념공부_04.md
@@ -38,7 +38,7 @@ StringBuffer sb= new StringBuffer("hello");
 sb.append(" world");
 ```
 
-![](C:\Users\user\Desktop\myBlog\sunlike0508.github.io\assets\images\StringBuffer.png)
+![]({{site.url}}/assets/images/StringBuffer.png)
 
 
 
