--- a/_posts/java/2020-04-10-Java개념공부_04.md
+++ b/_posts/java/2020-04-10-Java개념공부_04.md
@@ -42,6 +42,12 @@ sb.append(" world");
 
 
 
+*그런데 JDK 1.5버전 이후로는 컴파일 단계에서 String 객체를 사용해도 StringBuilder로 컴파일 하도록 변경.
+
+그래서 성능상 차이가 없어짐.
+
+
+
 **StringBuffer와 StringBuilder의 차이점**
 
 *가장 큰 차이점은 동기화의 유무.
