--- a/_posts/java/2020-04-13-Java개념공부_05.md
+++ b/_posts/java/2020-04-13-Java개념공부_05.md
@@ -105,4 +105,4 @@ public class Test {
 }
 ```
 
-*오류가 발생하는 이유: 변수 name1은 객체가 생성되어야 heap 영역에 변수가 생성된다. 그러나 printName() 메소드는 static 메소드이기 때문에 객체의 생성없이 접근할 수 있기 때문에 아직 할당되지 않은 name1에 접근하려고 하므로 문제가 발생함.
+*오류가 발생하는 이유: 변수 name1은 객체가 생성되어야 heap 영역에 변수가 생성된다. 그러나 printName() 메소드는 static 메소드여서 객체의 생성없이 접근할 수 있기 때문에 아직 할당되지 않은 name1에 접근하려고 하므로 문제가 발생함.
