--- a/_posts/java/2020-04-10-Java개념공부_03.md
+++ b/_posts/java/2020-04-10-Java개념공부_03.md
@@ -22,6 +22,8 @@ last_modified_at: 2020-04-10
 
 *자바8에서 추가된 메소드
 
+*배열 or 리스트에 값들을 출력할 때 그 사이마다 원하는 문자를 넣어서 출력 가능
+
 *형식 : join("추가할 문자", "List or Array")
 
 ```java
@@ -179,3 +181,16 @@ public static void main(String[] args) {
 */
 ```
 
+**substring**
+
+*String 문자열에서 원하는 부분을 출력하게 만듬
+
+```java
+String text = "aabBcde";
+
+System.out.println(text.substring(0,1)); //a
+System.out.println(text.substring(0));	//aabBcde
+System.out.println(text.substring(1));  //abBcde
+System.out.println(text.substring(5,7)); //de
+System.out.println(text.substring(2,6)); //bBcd
+```
