--- a/_posts/codewar/2020-04-14-Codewar_21.md
+++ b/_posts/codewar/2020-04-14-Codewar_21.md
@@ -1,6 +1,6 @@
 ---
-title:  "CodeWar 스무 번째 문제"
-excerpt: "PaginationHelper"
+title:  "CodeWar 스물 한 번째 문제"
+excerpt: "Persistent Bugger."
 classes: wide
 categories:
   - CodeWar
@@ -10,7 +10,7 @@ tags:
 last_modified_at: 2020-04-14
 ---
 
-#### [PaginationHelper](https://www.codewars.com/kata/515bb423de843ea99400000a)
+#### [Persistent Bugger.](https://www.codewars.com/kata/55bf01e5a717a0d57e0000ec)
 
 ```java
 public static int persistence(long n) {
