--- a/_posts/java/2020-04-14-Java개념공부_07.md
+++ b/_posts/java/2020-04-14-Java개념공부_07.md
@@ -1,24 +1,25 @@
 ---
-title:  "자바 개념공부 06"
-excerpt: "final에 대해서"
+title:  "자바 개념공부 07"
+excerpt: "기타 제어자"
 classes: wide
 categories:
   - java
 tags:
-  - java
-  - final
-last_modified_at: 2020-04-13
+  - [java, 기타제어자, final, static, abstract]
+last_modified_at: 2020-04-14
 ---
 
-#### Final
+# 기타제어자
+
+
+
+### final 
 
 *final는 entity를 한 번만 할당하기 위해서 사용한다.
 
 *즉, 두 번 이상 할당하려고 할 경우 오류가 발생한다.
 
 *final은 크게 변수, 메소드, 클래스에서 사용한다.
-
-
 
 **final 변수**
 
