--- a/_posts/java/2020-04-14-Java개념공부_07.md
+++ b/_posts/java/2020-04-14-Java개념공부_07.md
@@ -21,6 +21,12 @@ last_modified_at: 2020-04-14
 
 *final은 크게 변수, 메소드, 클래스에서 사용한다.
 
+*변수에서 사용하면 값 변경이 불가능
+
+*메소드에 사용하면 오버라이딩이 불가능
+
+*클래스에 사용하면 상속 불가능
+
 **final 변수**
 
 1.원시타입 : 가장 기본적인 타입. 한 번 초기화된 변수는 변경할 수 없다.
@@ -140,3 +146,36 @@ public final class String
 }
 ```
 
+
+
+### static
+
+*프로그램 시작 시 최초 한번 생성, 초기화 됨
+
+*인스턴스 생성 안하고 바로 사용
+
+*해당 클래스의 인스턴스가 모두 공유
+
+*자세한건 static의 경우 따로 자바 포스팅을 해두었다.
+
+
+
+### abstract
+
+*선언부만 있고 구현부가 없는 추상 클래스 or 메소드에 사용
+
+*하나 이상의 추상 메소드가 있다면 클래스 앞에 꼭 붙여야함
+
+*abstract 클래스를 상속 받으면 반드시 구현해야함 ->  abstract의 목적
+
+
+
+### 추가 정리
+
+*final과 abstract는 당연 같이 사용이 불가. final은 상속 및 오버라이딩이 불가능한데 abstract는 상속해서 오버라이딩해야함
+
+*static과 abstract 또한 같이 불가능. static은 바로 사용 가능하도록 구현되어야 하는데 abstract는 구현이 없음.
+
+*private과 abstract 또한 같이 불가능. abstract 메소드는 다른 클래스가 상속하여 오버라이딩해야 사용할 수 있는데 private 메소드는 자식 클래스에서 접근이 불가능하다.
+
+*메소드에 private과 final은 함께 사용할 필요가 없음. 둘다 오버라이딩이 불가능하므로 둘 중 하나만 쓰면 된다.
