--- a/_posts/java/2020-04-10-Java개념공부_03.md
+++ b/_posts/java/2020-04-10-Java개념공부_03.md
@@ -10,7 +10,7 @@ tags:
 last_modified_at: 2020-04-10
 ---
 
-#### **String**
+## String
 
 *String 관련 메소드를 정리하는 포스트이다.
 
@@ -18,7 +18,7 @@ last_modified_at: 2020-04-10
 
 
 
-**join**
+#### join
 
 *자바8에서 추가된 메소드
 
@@ -70,7 +70,7 @@ System.out.println(sql1);
 
 
 
-**split**
+#### split
 
 *형식 : split( String regex, int limit ) : limit은 토큰 갯수를 설정. -1을 넣을 경우 마지막
 
@@ -181,7 +181,9 @@ public static void main(String[] args) {
 */
 ```
 
-**substring**
+
+
+#### subString
 
 *String 문자열에서 원하는 부분을 출력하게 만듬
 
@@ -194,3 +196,18 @@ System.out.println(text.substring(1));  //abBcde
 System.out.println(text.substring(5,7)); //de
 System.out.println(text.substring(2,6)); //bBcd
 ```
+
+
+
+#### indexOf, lastIndexOf
+
+*string.indexOf(char or String a) : string에 a가 있는 index를 출력
+
+*string.lastIndexOf(char or String a) : string에 a가 있는 마지막 index를 출력
+
+```java
+String str = "abcdefgc";
+System.out.println(str.indexOf('c'));		// 2
+System.out.println(str.lastIndexOf('c'));	// 7
+```
+
