--- a/_posts/java/2020-04-10-Java개념공부_03.md
+++ b/_posts/java/2020-04-10-Java개념공부_03.md
@@ -7,7 +7,7 @@ categories:
 tags:
   - java
   - String
-last_modified_at: 2020-04-10
+last_modified_at: 2020-04-21
 ---
 
 ## String
@@ -18,7 +18,7 @@ last_modified_at: 2020-04-10
 
 
 
-#### join
+## join
 
 *자바8에서 추가된 메소드
 
@@ -70,7 +70,7 @@ System.out.println(sql1);
 
 
 
-#### split
+## split
 
 *형식 : split( String regex, int limit ) : limit은 토큰 갯수를 설정. -1을 넣을 경우 마지막
 
@@ -183,7 +183,7 @@ public static void main(String[] args) {
 
 
 
-#### subString
+## subString
 
 *String 문자열에서 원하는 부분을 출력하게 만듬
 
@@ -199,7 +199,7 @@ System.out.println(text.substring(2,6)); //bBcd
 
 
 
-#### indexOf, lastIndexOf
+## indexOf, lastIndexOf
 
 *string.indexOf(char or String a) : string에 a가 있는 index를 출력
 
@@ -209,5 +209,40 @@ System.out.println(text.substring(2,6)); //bBcd
 String str = "abcdefgc";
 System.out.println(str.indexOf('c'));		// 2
 System.out.println(str.lastIndexOf('c'));	// 7
+```
+
+
+
+## replace 와 replaceAll의 차이점
+
+*String replace(CharSequnce target, CharSequence replacement)
+
+*String replaceAll(String regex, String replacement)
+
+replace는 첫번째 인자값을 보시면 문자열이 들어간다. 결국 문자열만 변환가능.
+
+replaceAll은 첫번째 인자값에 정규식이 들어간다.
+
+예제)
+
+```java
+String str = “aaabbbccccabcddddabcdeeee”;
+String result1 = str.replace(“abc”, “왕”); String result2 = str.replaceAll(“[abc]”, “왕”);
+
+System.out.println(“replace result->”+ result1); 
+System.out.println(“replaceAll result->”+ result2);
+
+//[결과값]
+//replace result->aaabbbcccc왕dddd왕deeee
+//replaceAll result->왕왕왕왕왕왕왕왕왕왕왕왕왕dddd왕왕왕deeee
+//replaceAll에는 정규식을 사용할수가 있어서 replace에서 처리하지 못한 문자열도 처리가 가능.
+```
+
+*(문자열)+ : 이것의 의미는 문자열이 포함것에 대해 추가 중복되는 문자열을 의미
+
+```java
+String song = "SWUBWUBWUBS";
+return song.replaceAll("(WUB)+", " ").trim();
+//결과값 : SS
 ```
 
