--- a/_posts/web/2020-04-20-웹프로그래밍_01.md
+++ b/_posts/web/2020-04-20-웹프로그래밍_01.md
@@ -1,15 +1,15 @@
 ---
-jtitle:  "자바 개념공부 10"
+jtitle:  "웹 프로그래밍 01"
 excerpt: "쿠키/세션"
 classes: wide
 categories:
-  - java
+  - web
 tags:
-  - [쿠키/세션]
+  - [쿠키,세션]
 last_modified_at: 2020-04-20
 ---
 
-# 동기화 / 비동기화
+
 
 # 쿠키(Cookie) / 세션(Session)
 
