--- a/_posts/tddCode/lotto/2020-04-27-lotto-01.md
+++ b/_posts/tddCode/lotto/2020-04-27-lotto-01.md
@@ -63,7 +63,15 @@ last_modified_at: 2020-04-27
 
 ### 해본 후기
 
-TDD 로 처음 구현해봤는데 생각보다 어렵다. TDD를 알기전에는 마구잡이로 개발했다고 한다면 여긴 TDD의 규칙에 따라 조금씩 함수 하나에 대해서 구현하고 다시 다른 함수를 구현해 나가는 점진적인 방식이었다. 문제는 사실 어렵지는 않으나 TDD 방식 및 git 관리 방식을 추가하여 하다보니 처음이라 익숙치가 않아 계속해서 내가 생각한 설계를 바꾸어 나갔다. 문제가 주어졌다면 TDD 1장에서 읽은 대로 클래서의 속성보단 행위에 대해서 전체적으로 구상을 한 후에 개발을 해야겠다. 물론 개발은 한 단계씩 점차적으로 해야겠지만 말이다.
+TDD 로 처음 구현해봤는데 생각보다 어렵다. 
+
+TDD를 알기전에는 마구잡이로 개발했다고 한다면 여긴 TDD의 규칙에 따라 조금씩 함수 하나에 대해서 구현하고 다시 다른 함수를 구현해 나가는 점진적인 방식이었다. 
+
+문제는 어렵지는 않으나 TDD 와 git 규칙을 준수하며 하다보니 익숙치가 않아 계속해서 내가 생각한 설계가 잘못 됨을 느꼈다.
+
+문제가 주어졌다면 TDD 1장에서 읽은 대로 클래서의 속성보단 행위에 대해서 전체적으로 구상을 한 후에 개발을 해야겠다. 
+
+물론 개발은 한 단계씩 점차적으로 해야겠지만 말이다.
 
 
 
