--- a/_posts/book/tdd/2020-04-27-tdd-01.md
+++ b/_posts/book/tdd/2020-04-27-tdd-01.md
@@ -56,7 +56,7 @@ last_modified_at: 2020-04-27
 
 ### TDD 진행 예제
 
-<두 가지 방식으로 접근 가능>
+##### 두 가지 방식으로 접근 가능
 
 1. 구현 대상 클래스의 외형에 해당하는 메소드를 먼저 만들고 테스트 케이스를 일괄적으로 만드는 방식
 2. 테스트 케이스를 하나씩 추가해나가면서 구현 클래스를 점진적으로 만드는 방식
