--- a/_posts/book/tdd/2020-04-28-tdd-02.md
+++ b/_posts/book/tdd/2020-04-28-tdd-02.md
@@ -354,4 +354,86 @@ assertThat( entity, is(expectedEntity) );
 | hasToString                   | toString 메소드의 값과 일치 여부를 판별한다. assertThat(account, hasToString(“Account”)); | HasToString                   |
 | instanceOf typeCompatibleWith | 동일 인스턴스인지 타입 비교. 동일하거나 상위 클래스, 인터페이스인지 판별 | IsInstanceOf IsCompatibleType |
 | notNullValue nullValue        | Null인지, 아닌지를 판별                                      | IsNull                        |
-| sameInstance                  | Object가 완전히 동일한지 비교. </br> equals 비교가 아닌 ==(주소 비교)로 비교하는 것과 동일 | IsSame                        |
+| sameInstance                  | Object가 완전히 동일한지 비교.  equals 비교가 아닌 ==(주소 비교)로 비교하는 것과 동일 | IsSame                        |
+
+#### 논리(Logical)
+
+| 메소드 | 설명                                                         | 클래스명 |
+| ------ | ------------------------------------------------------------ | -------- |
+| allOf  | 비교하는 두 오브젝트가 각각 여러 개의 다른 오브젝트를 포함하고 있을 경우 (예를 들어 collection) 서로 동일한지 판별 | AllOf    |
+| anyOf  | allOf와 동일하나 하나라도 일치하면 true                      | AnyOf    |
+| not    | 서로 다를 경우                                               | IsNot    |
+
+#### 빈즈(Beans) : 자바 빈과 비교
+
+| 메소드      | 설명                      | 클래스명    |
+| ----------- | ------------------------- | ----------- |
+| hasProperty | Java 빈즈 프로퍼티 테스트 | HasProperty |
+
+#### 컬렉션(Collection) : 배열과 컬렉션
+
+| 메소드                     | 설명                           | 클래스명               |
+| -------------------------- | ------------------------------ | ---------------------- |
+| arrary                     | 두 배열의 요소 일치하는지 판별 | IsArray                |
+| hasEntry, hasKey, hasValue | Map 요소 포함 여부             | IsMapContaining        |
+| hasItem, hasItems          | 특정 요소 포함 여부            | IsCollectionContaining |
+| hasItemInArray             | 배열 내에 대상 여부            | IsArrayContaining      |
+
+#### 숫자(Number) : 수비교
+
+| 메소드                            | 설명                            | 클래스명           |
+| --------------------------------- | ------------------------------- | ------------------ |
+| closeTo                           | 부동소수점 값 근사값 일치  여부 | IsCloseTo          |
+| greaterThan, greaterThanOrEqualTo | 값 비교. >, >=                  | OrderingComparison |
+| lessThan, lessThanEqualTo         | 값 비교. <, <=                  | OrderingComparison |
+
+#### 텍스트(Text) : 문자열 비교
+
+| 메소드                    | 설명                       | 클래스명                  |
+| ------------------------- | -------------------------- | ------------------------- |
+| containsString            | 문자열 포함                | StringContains            |
+| startsWith                | 문자열 시작                | StringStartsWith          |
+| endsWith                  | 문자열 종료                | StringEndsWith            |
+| equalToIgnoringCase       | 대소문자 구분 않고 비교    | IsEqualIgnoringCase       |
+| equalToIgnoringWhiteSpace | 문자열 공백 구분 않고 비교 | IsEqualIgnoringWhiteSpace |
+
+
+
+#### Matchers
+
+* 사용자 편의를 위해 만들어짐
+* 위임 같은 느낌으로 Matchers 클래스 import해서 사용하면 위에 메소드들을 편하게 사용.
+* 아래는 정의 되어 있는 코드 예시
+
+```java
+package org.hamcrest;
+
+public class Matchers {
+    public static <T> org.hamcrest.Matcher<T> allOf(…) {
+    	return org.hamcrest.core.AllOf.<T>allOf(first, second, third,fourth);
+    }
+    public static <T> org.hamcrest.core.AnyOf<T> anyOf(…) {
+   	 	return org.hamcrest.core.AnyOf.<T>anyOf(matchers);
+    }
+    public static <T> org.hamcrest.Matcher<T> is(org.hamcrest.Matcher<T> matcher) {
+    	return org.hamcrest.core.Is.<T>is(matcher);
+    }
+…
+…
+```
+
+
+
+
+
+** 인터뷰 내용에서 개인적 좋은 내용 **
+
+* TDD는 개발자의 체질적인 변화를 요구
+
+* TDD의 중요 혈자리 2가지 : 
+
+1. 모든 단위 테스트 통과하는 시간을 짧게 유지하는것
+
+                                               2. 시스템의 핵심을 끝에서 끝까지 간단하게 관통하는 테스트가 빨리 나오는 것
+
+* TDD란 개발기간은 조금 늘어나지만 결함을 획기적으로 줄일 수 있는 기법
