--- a/_posts/tddCode/lotto/2020-04-27-lotto-01.md
+++ b/_posts/tddCode/lotto/2020-04-27-lotto-01.md
@@ -3,9 +3,9 @@ title:  "로또 프로그램"
 excerpt: "테스트주도개발 연습 1장"
 classes: wide
 categories:
-  - TDD
+  - TDDTEST
 tags:
-  - TDD
+  - lotto
 last_modified_at: 2020-04-27
 ---
 
